--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -181,7 +181,7 @@ config ARM_DMA_IOMMU_ALIGNMENT
 	  specified order. The order is expressed as a power of two multiplied
 	  by the PAGE_SIZE.
 
-endif
+endif # ARM_DMA_USE_IOMMU
 
 config SYS_SUPPORTS_APM_EMULATION
 	bool
@@ -549,7 +549,7 @@ config ARCH_MULTI_CPU_AUTO
 	def_bool !(ARCH_MULTI_V4 || ARCH_MULTI_V4T || ARCH_MULTI_V6_V7)
 	select ARCH_MULTI_V5
 
-endmenu
+endmenu # "Multiple platform selection"
 
 config ARCH_VIRT
 	bool "Dummy Virtual Machine"
@@ -771,7 +771,7 @@ config IWMMXT
 
 if !MMU
 source "arch/arm/Kconfig-nommu"
-endif
+endif # !MMU
 
 config PJ4B_ERRATA_4742
 	bool "PJ4B Errata 4742: IDLE Wake Up Commands can Cause the CPU Core to Cease Operation"
@@ -973,14 +973,14 @@ config ARM_ERRATA_764369
 	  in the diagnostic control register of the SCU.
 
 config ARM_ERRATA_775420
-       bool "ARM errata: A data cache maintenance operation which aborts, might lead to deadlock"
-       depends on CPU_V7
-       help
-	 This option enables the workaround for the 775420 Cortex-A9 (r2p2,
-	 r2p6,r2p8,r2p10,r3p0) erratum. In case a data cache maintenance
-	 operation aborts with MMU exception, it might cause the processor
-	 to deadlock. This workaround puts DSB before executing ISB if
-	 an abort may occur on cache maintenance.
+	bool "ARM errata: A data cache maintenance operation which aborts, might lead to deadlock"
+	depends on CPU_V7
+	help
+	  This option enables the workaround for the 775420 Cortex-A9 (r2p2,
+	  r2p6,r2p8,r2p10,r3p0) erratum. In case a data cache maintenance
+	  operation aborts with MMU exception, it might cause the processor
+	  to deadlock. This workaround puts DSB before executing ISB if
+	  an abort may occur on cache maintenance.
 
 config ARM_ERRATA_798181
 	bool "ARM errata: TLBI/DSB failure on Cortex-A15"
@@ -1073,7 +1073,7 @@ config ARM_ERRATA_857272
 	  config option from the A12 erratum due to the way errata are checked
 	  for and handled.
 
-endmenu
+endmenu # "System Type"
 
 source "arch/arm/common/Kconfig"
 
@@ -1115,7 +1115,7 @@ config ARM_ERRATA_814220
 	  This ERRATA only affected the Cortex-A7 and present in r0p2, r0p3,
 	  r0p4, r0p5.
 
-endmenu
+endmenu # "Bus support"
 
 menu "Kernel Features"
 
@@ -1631,7 +1631,7 @@ config STACKPROTECTOR_PER_TASK
 	  Enable this option to switch to a different method that uses a
 	  different canary value for each task.
 
-endmenu
+endmenu # "Kernel Features"
 
 menu "Boot options"
 
@@ -1903,7 +1903,7 @@ config DMI
 	  firmware need to be enabled. This would require the DMI subsystem
 	  to be enabled much earlier than we do on ARM, which is non-trivial.
 
-endmenu
+endmenu # "Boot options"
 
 menu "CPU Power Management"
 
@@ -1911,7 +1911,7 @@ source "drivers/cpufreq/Kconfig"
 
 source "drivers/cpuidle/Kconfig"
 
-endmenu
+endmenu # "CPU Power Management"
 
 menu "Floating point emulation"
 
@@ -1985,7 +1985,7 @@ config KERNEL_MODE_NEON
 	help
 	  Say Y to include support for NEON in kernel mode.
 
-endmenu
+endmenu # "Floating point emulation"
 
 menu "Power management options"
 
@@ -2005,10 +2005,10 @@ config ARCH_HIBERNATION_POSSIBLE
 	depends on MMU
 	default y if ARCH_SUSPEND_POSSIBLE
 
-endmenu
+endmenu # "Power management options"
 
 if CRYPTO
 source "arch/arm/crypto/Kconfig"
-endif
+endif # CRYPTO
 
 source "arch/arm/Kconfig.assembler"
